k8s/deploy_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: nginx
        image: ghcr.io/joaolmonteiro/eks_hello_world/hello-world:latest
        ports:
        - containerPort: 80
