k8s/frontend-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployfrontend2
  namespace: hello-world-preprod
  labels:
    environment: preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend2
      environment: preprod
  template:
    metadata:
      labels:
        app: frontend2
        environment: preprod
    spec:
      containers:
      - name: frontend2
        image: ghcr.io/joaolmonteiro/eks_hello_world/hello-world:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume2
          mountPath: /usr/share/nginx/html/pop2/config.json
          subPath: config.json
      volumes:
      - name: config-volume2
        configMap:
          name: ingress-config
