k8s/frontend-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service1
  namespace: hello-world-preprod
  labels:
    environment: preprod
spec:
  selector:
    app: frontend1
    environment: preprod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
