k8s/frontend-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service2
spec:
  selector:
    app: frontend2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
