k8s/frontend-service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service3
  namespace: hello-world-preprod
  labels:
    environment: preprod
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
