k8s/fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pop1/
        pathType: Prefix
        backend:
          service:
            name: frontend-service1
            port:
              number: 80

      - path: /pop2/
        pathType: Prefix
        backend:
          service:
            name: frontend-service2
            port:
              number: 80

      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: backend-api-service1
            port:
              number: 3000
